--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Global Variables*/
 :root {
     /* yellow */
     --primary-color: #FFD53D;
@@ -31,7 +32,6 @@ body {
 h1 {
     font-family: var(--font-header);
     line-height: 75px;
-    padding-left: 40px;
     text-align: center;
 }
 
@@ -250,10 +250,6 @@ button:hover, button:focus, .button:hover, .button:focus {
         margin-top: 0;
     }
 
-    .profile h1 {
-        padding: 0;
-    }
-
     #portrait {
         width: 250px;
         border-radius: 50%;
@@ -275,10 +271,6 @@ button:hover, button:focus, .button:hover, .button:focus {
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
-  }
-
-  h1 {
-    font-size: 22px;
   }
 }
 
